# jakeybot-degen

./: .gitignore  ADMIN_PERMISSION_CHANGES.md  ASSISTANTS_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CRYPTO_FIX_SUMMARY.md  LICENSE  MEMORY_SYSTEM_REVIEW.md  MODEL_CURRENT_COMMAND_SUMMARY.md  README.md  commands.yaml  dev.env.template  jakey.sh  jakey_quick_reference.txt  keno_number_gen.py  main.py  pyproject.toml  requirements.txt  test_commands.py
aimodels/: enhanced_web_search.py
aimodels/_template_/: infer.py
aimodels/azure_foundry/: base.py  config.py
aimodels/azure_foundry/deepseek/: infer.py
aimodels/claude/: __init__.py  config.py  infer.py
aimodels/gemini/: config.py  infer.py
aimodels/google/: config.py  infer.py
aimodels/kimi/: config.py  infer.py
aimodels/openai/: config.py  infer.py
aimodels/openrouter/: config.py  infer.py
aimodels/pollinations/: __init__.py  config.py  infer.py
aimodels/xai/: config.py  infer.py
cogs/: admin.py  engagement.py  gambling_games.py  keno.py  misc.py  music.py
cogs/ai/: chat.py  generative_chat.py
cogs/ai/gemini/: fun.py  message_actions.py  oneoff.py  summarize.py
config/: ai_models.yaml
core/: types.py
core/ai/: core.py  history.py
core/exceptions/: __init__.py
core/services/: auto_return_manager.py  auto_tool_detector.py  cache_manager.py  colored_logging.py  config_validator.py  connection_pool.py  database_manager.py  decorators.py  helperfunctions.py  initbot.py  input_validator.py  performance_monitor.py  rate_limiter.py
data/: assistants.yaml  auto_tool_config.yaml  auto_tool_config.yaml.bak  engagement_config.yaml  exasearch_config.yaml  models.yaml  trivia_questions.yaml
docs/: API.md  AUTO_IMAGE_TROUBLESHOOTING.md  AUTO_RETURN_GUIDE.md  AUTO_TOOL_SENSITIVITY.md  CHANGELOG.md  COGS_CLEANUP_SUMMARY.md  COMMAND_SYNC_GUIDE.md  COMMAND_VISIBILITY_GUIDE.md  CONFIG.md  CRYPTO_PRICE_TOOL.md  CURRENCY_CONVERTER.md  DEVELOPER_GUIDE.md  DISCORD_QUICKSTART.md  DISCORD_USER_GUIDE.md  EXASEARCH_IMPROVEMENTS.md  FAQ.md  GLOBAL_FACTS_INJECTION.md  IMPROVEMENTS_SUMMARY.md  MEMORY_ANALYSIS_REPORT.md  MEMORY_FIXES.md  MEMORY_IMPLEMENTATION.md  MEMORY_INTEGRATION_VERIFICATION.md  MEMORY_QUICKSTART.md  MISC_COMMANDS_REVIEW.md  MUSIC_GUIDE.md  POLLINATIONS_AI_UPDATE.md  POLLINATIONS_IMAGEGEN_UPDATE.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  TOOLS.md
examples/: currency_converter_usage.md  memory_demo.md
scripts/: README.md  backup_database.py  check_databases.py  database_dump.py  flush_db.py  flush_old_memories.py  manage_ai_models.py  manage_tools.py  reset_database.py  security_check.py  set_default_tool.py  setup_env.py  setup_memory.py  test_auto_return.py  test_memory.py  test_memory_fix.py  test_smart_suggestions.py
tests/: test_exasearch_sensitivity.py  test_pollinations_ai.py
tools/CodeExecution/: tool.py
tools/CryptoPrice/: manifest.py  tool.py
tools/CurrencyConverter/: __init__.py  manifest.py  tool.py
tools/ExaSearch/: manifest.py  tool.py
tools/IdeationTools/: tool.py
tools/ImageGen/: __init__.py  manifest.py  tool.py
tools/Memory/: manifest.py  tool.py
